hotwire SPA flash messages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+#notice{
+  background-color: green;
+  color: white;
+  padding: 6px;
+  border-radius: 6px;
+}
