--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <%= yield %>
+    <header><%= Time.zone.now %></header>
+    <main>
+      <div id="flash" style="position:absolute; z-index: 2; right: 10px;">
+        <%= render partial: "layouts/flash" %>
+      </div>
+      <%= yield %>
+    </main>
   </body>
 </html>
